<?xml version="1.0"?>
<package format="3">
  <name>jetson_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for jetson project</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
